# macclean

./: Makefile.am  README.md  configure.ac  macclean.desktop.in  macclean.py
