# The actual runnable program is set to the SCRIPTS primitive.
# # Prefix bin_ tells where to copy this
bin_SCRIPTS = macclean.py
# # List of files to be distributed
EXTRA_DIST=  \
	$(bin_SCRIPTS) \
	$(bin_DATA)
#
#     # The desktop files
desktopdir = $(datadir)/applications
desktop_DATA = macclean.desktop
